2010-08-21  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: In default, don't enable whitespace in sql-mode.

2010-08-19  Meteor Liu  <meteor1113@gmail.com>

	* snippets/text-mode/isot: Add.

2010-08-14  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Enable upcase-region and downcase-region only (region-active-p).

2010-08-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable linum-mode in default because slow.

	* init-misc.el: Add cn-weather.

2010-08-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (org-mode-hook): Enable whitespace in org-mode.

2010-08-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Set auto-complete for clang.

2010-08-02  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("company"): Set autoload for company-mode.

2010-07-25  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Update auto-complete from 1.2 to 1.3

2010-07-22  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Disable highlight-symbol-mode in console.

2010-07-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Enable pc-selection-mode in emacs-21.

2010-07-14  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Add custom-autoload for cedet in emacs-21.

	* init-misc.el: Add line-number-at-pos for drag-stuff.
	Emacs-21 can't use eim.
	Don't use drag-stuff in emacs-21.

	* init-basic.el (frame-title-format): system-name must in the last.

2010-07-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Enable transient-mark-mode.

2010-07-10  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el:
	doxymacs,sql-indent,highlight-symbol,highlight-parentheses now
	compilation with emacs-21.

	* init-basic.el: Enable move-line-up and move-line-down.

2010-07-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Compilation with emacs-21.

2010-07-04  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el (toggle-toolbar-menu): Add change to csv-mode menu.

	* init-misc.el: Add csv-mode.
