@@ -1,3 +1,7 @@
+2010-08-23  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (format-region): Check whitespace-cleanup.
+
 2010-08-21  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: In default, don't enable whitespace in sql-mode.
